# algorithms-data-structures

./: CMakeLists.txt  README.md  sample.cpp
.github/workflows/: tests.yml
algebra/: README.md  bin_pow.hpp  bin_search.hpp  c.hpp  fft.hpp  float.hpp  modular.hpp  polynomial.hpp  z.hpp
data-structures/: README.md  dsu.hpp  node-storage.hpp  partition.hpp  rmq.hpp  walker.hpp
data-structures/segment-tree/: node-storage.hpp  segment-tree.hpp  walker.hpp
graphs/: README.md  bfs.hpp  capacity-map.hpp  condensation.hpp  dfs.hpp  edge-property-map.hpp  flat-graph.hpp  flow.hpp  graph.hpp  property-map.hpp  push-relabel.hpp  vertex-property-map.hpp  visitor.hpp
ranges/: container_adapter.hpp  filter_range.hpp  iota_range.hpp  iterator_range.hpp  transform_range.hpp
strings/: aho-corasick.hpp  lcp.hpp  prefix-function.hpp  single-mistake.hpp  suff-array.hpp  suff-automaton.hpp  ukkonen.hpp  z-function.hpp
tests/: aho-corasik-test.cc  bfs-test.cc  flat-graph-test.cc  modular-test.cc  push-relabel-test.cc  rmq-test.cc  stree-test.cc
utility/: README.md  container_adapter.hpp  enumerator.hpp  filter_range.hpp  io.hpp  iota_range.hpp  iterator_range.hpp  make_vec.hpp  ranges.hpp  type_traits.hpp
